<resources>
    <string name="app_name">EasyLearner</string>
    <string name="fav_folder">Избранные</string>
    <string name="openDrawer">open</string>
    <string name="closeDrawer">close</string>
    <string name="addFolder">Новая тема</string>
    <string name="search_in_net">Поиск в Интернете</string>
    <string name="Folders">Темы</string>
    <string name="NewFolder">Новая тема</string>
    <string name="AddFolder">Добавить тему</string>
    <string name="FolderName">Название темы</string>
    <string name="save">Сохранить</string>
    <string name="chooseWords">Выберите слова:</string>
    <string name="AddWord">Добавить слово</string>
    <string name="Error_no_Words_In_Folder">Нету слов в данной теме </string>
    <string name="Error_no_Unfoldered_Words">Нету слов без темы , добавьте их в главном окне</string>
    <string name="unsorted_item_string">Неотсортированые</string>
    <string name="favourite_item_string">Любимые</string>
    <string name="action_delete">Удалить</string>
    <string name="add_en_word">Введите слово</string>
    <string name="add_translate">Введие перевод</string>
    <string name="choose_folder">Выберите тему</string>
    <string name="cancel">Отменить</string>
    <string name="change_folder">изменить</string>
    <string name="default_folder">Не выбрана</string>
    <string name="change_word">Изменить слово</string>
    <string name="put_transcription">Транскрипция</string>
    <string name="vocablurary">Словарь</string>
    <string name="compilations">Подборки</string>
    <string name="Error_no_Words_to_Add">Нету слов для добавления в папку</string>
    <string name="Error_no_Internet_Connection">Отсутсвует подключение к интернету</string>
    <string name="default_page">Главная</string>
</resources>
