<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/add_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_delete_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp">

                <EditText
                    android:id="@+id/english_word"

                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="@drawable/edit_text_style"
                    android:hint="@string/add_en_word"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

                <ImageView
                    android:id="@+id/delete_button"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="1dp"
                    android:src="@drawable/cancel_btn"
                    android:visibility="invisible" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/add_trans_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/add_trans_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="60dp"
                android:src="@drawable/add_trans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/add_trans_button"
                android:text="@string/add_translate" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/folder_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_action_black_folder" />

            <TextView
                android:id="@+id/folder_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/folder_icon"
                android:ellipsize="end"
                android:ems="7"
                android:gravity="left"
                android:maxLines="1"
                android:text="@string/default_folder"
                android:textColor="@color/primary_text"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/choose_folder_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="30dp"
                android:maxLines="1"
                android:text="@string/change_folder"
                android:textColor="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_add_style"
                android:gravity="center"
                android:text="@string/AddWord"
                android:textColor="@android:color/white"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>